--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base{
+  body {
+      @apply dark:bg-gray-800 dark:text-white bg-white text-[#1F2328];
+  }
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -10,8 +16,8 @@
 
 html,
 body {
-  background-color: white;
-  color: #1F2328;
+  /* background-color: white;
+  color: #1F2328; */
   overflow-x: hidden;
   min-height: 100vh;
 }
