--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   body {
     @apply dark:bg-gradient-to-r dark:from-black dark:to-slate-700 bg-gradient-to-r from-slate-300 to-white;
-    @apply dark:text-white text-[#1F2328];
+    @apply dark:text-white text-black;
   }
 }
 
